# qadence-libs

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  renovate.json  versions.json
.github/workflows/: lint.yml  test_fast.yml
docs/: CONTRIBUTING.md  docsutils.py  environment.yml  index.md  sample_page.md
docs/qinfo_tools/: qng.md  quantum_natural_gradient.ipynb
qadence_libs/: __init__.py  main.py  types.py
qadence_libs/constructors/: __init__.py  feature_maps.py  hea.py  iia.py  qft.py  rydberg_feature_maps.py  rydberg_hea.py
qadence_libs/constructors/ufa_models/: README.md  __init__.py  config.py  quantum_models.py
qadence_libs/qinfo_tools/: __init__.py  qfi.py  qng.py  spsa.py  utils.py
tests/: conftest.py  metrics.py  test_main.py
tests/constructors/: test_ansatz.py  test_feature_maps.py  test_hamiltonians.py  test_qft.py  test_rydberg_hea.py
tests/qinfo_tools/: test_qfi.py  test_qng.py  test_spsa.py
v0.1.1/: 404.html  index.html
v0.1.1/sample_page/: index.html
v0.1.1/search/: search_index.json
v0.1.2/: 404.html  index.html
v0.1.2/qinfo_tools/qng/: index.html
v0.1.2/sample_page/: index.html
v0.1.2/search/: search_index.json
v0.1.3/: 404.html  index.html
v0.1.3/qinfo_tools/qng/: index.html
v0.1.3/sample_page/: index.html
v0.1.3/search/: search_index.json
